Finalizando estilização do projeto

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </p>
         </section>
 
-        <section id="bkg01">
+        <section id="bkg01" class="img">
             <p>
                 Não é mais como era antes<br>
                 É tudo abreviado<br>
@@ -57,7 +57,7 @@
             </p>
         </section>
 
-        <section id="bkg02">
+        <section id="bkg02" class="img">
             <p>
                 Tenho saudade das cartas<br>
                 Escritas com a própria mão<br>
